Update RJ tube with info on 6th wave

--- a/Athena-Code/athena-results-analysis.ipynb
+++ b/Athena-Code/athena-results-analysis.ipynb
@@ -188,7 +188,7 @@
     "           (330, 'slowShockLeftSide'),\n",
     "           (333, 'slowShockRightSide'),\n",
     "           (420, 'rightFastRareLeftSide'),\n",
-    "           (448, 'rightFastRareRightSide')], \n",
+    "           (448, 'rightFastRareRightSide')],\n",
     "          bwData)"
    ]
   },
@@ -276,7 +276,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 7,
    "id": "40d4cb55",
    "metadata": {},
    "outputs": [
@@ -315,10 +315,12 @@
       "switchOnSlowShockRightSide       240.0  0.651753  0.490103  0.322362  8.070540e-01  4.425110e-01  0.7  6.598380e-01  3.618000e-01\n",
       "contactLeftSide                  275.0  0.648553  0.489951  0.322525  8.072970e-01  4.426950e-01  0.7  6.599295e-01  3.618910e-01\n",
       "contactRightSide                 288.0  0.489933  0.489980  0.322518  8.073090e-01  4.426960e-01  0.7  6.599195e-01  3.618850e-01\n",
-      "rotationLeftSide                 322.0  0.496478  0.489823  0.308418  8.060830e-01  4.420150e-01  0.7  6.686695e-01  3.666915e-01\n",
-      "rotationRightSide                329.0  0.298260  0.198864 -0.016740  2.372870e-01  1.287780e-01  0.7  8.662095e-01  4.757390e-01\n",
-      "fastRareLeftSide                 351.0  0.298001  0.198448 -0.017358  2.364790e-01  1.278540e-01  0.7  8.669425e-01  4.750845e-01\n",
-      "fastRareRightSide                367.0  0.297673  0.197421 -0.018657  1.059540e-02  9.996860e-01  0.7  9.891580e-01  1.024949e-04\n"
+      "slowShockLeftSide                322.0  0.496478  0.489823  0.308418  8.060830e-01  4.420150e-01  0.7  6.686695e-01  3.666915e-01\n",
+      "slowShockRightSide               329.0  0.298260  0.198864 -0.016740  2.372870e-01  1.287780e-01  0.7  8.662095e-01  4.757390e-01\n",
+      "rotationLeftSide                 351.0  0.298001  0.198448 -0.017358  2.364790e-01  1.278540e-01  0.7  8.669425e-01  4.750845e-01\n",
+      "rotationRightSide                367.0  0.297673  0.197421 -0.018657  1.059540e-02  9.996860e-01  0.7  9.891580e-01  1.024949e-04\n",
+      "fastRareLeftSide                 435.0  0.297504  0.197234 -0.020018  1.137420e-02  1.000000e+00  0.7  9.883860e-01 -4.981931e-17\n",
+      "fastRareRightSide                460.0  0.299996  0.199995 -0.000033  1.855120e-05  1.000000e+00  0.7  9.999865e-01  1.737190e-16\n"
      ]
     }
    ],
@@ -331,8 +333,9 @@
     "# | Hydro Rarefaction     | 150                 | 165                  |\n",
     "# | Switch On Slow Shock  | 200                 | 240                  |\n",
     "# | Contact Discontinuity | 275                 | 288                  |\n",
-    "# | Rotation Wave         | 322                 | 329                  |\n",
-    "# | Fast Rarefaction      | 351                 | 367                  |\n",
+    "# | Slow Shock            | 322                 | 329                  |\n",
+    "# | Rotation Wave         | 351                 | 367                  |\n",
+    "# | Fast Rarefaction      | 435                 | 460                  |\n",
     "\n",
     "printData([(150, 'hydroRareLeftSide'),\n",
     "           (165, 'hydroRareRightSide'),\n",
@@ -340,10 +343,12 @@
     "           (240, 'switchOnSlowShockRightSide'),\n",
     "           (275, 'contactLeftSide'),\n",
     "           (288, 'contactRightSide'),\n",
-    "           (322, 'rotationLeftSide'),\n",
-    "           (329, 'rotationRightSide'),\n",
-    "           (351, 'fastRareLeftSide'),\n",
-    "           (367, 'fastRareRightSide')], \n",
+    "           (322, 'slowShockLeftSide'),\n",
+    "           (329, 'slowShockRightSide'),\n",
+    "           (351, 'rotationLeftSide'),\n",
+    "           (367, 'rotationRightSide'),\n",
+    "           (435, 'fastRareLeftSide'),\n",
+    "           (460, 'fastRareRightSide')], \n",
     "          rjData)"
    ]
   },
