--- a/Athena-Code/athena-results-analysis.ipynb
+++ b/Athena-Code/athena-results-analysis.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 2,
    "id": "24340c41",
    "metadata": {
     "ExecuteTime": {
@@ -24,7 +24,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 3,
    "id": "0e550cac",
    "metadata": {
     "ExecuteTime": {
@@ -194,14 +194,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 3,
    "id": "4507ff46",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "110c30fcc8a040b99bdab938c3d02c09",
+       "model_id": "0402826379284ec6b8302decf16d51db",
        "version_major": 2,
        "version_minor": 0
       },
@@ -354,14 +354,14 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 5,
    "id": "414b085b",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "efd1907cf74d4a59a7fdd2a509d67d3d",
+       "model_id": "d22ccc93940a432eb3b44ae8fd86aeb9",
        "version_major": 2,
        "version_minor": 0
       },
@@ -390,8 +390,8 @@
       "leftRarefactionCenter        100.0  0.368580  0.111253 -1.180830  0.0  0.0  0.0  0.183044  0.0\n",
       "leftVxTurnOver               210.0  0.058814  0.008819 -0.125475  0.0  0.0  0.0  0.029215  0.0\n",
       "midPoint                     256.0  0.034658  0.006776  0.000778  0.0  0.0  0.0  0.017333  0.0\n",
-      "rightRarefactionCenter       305.0  0.062587  0.009521  0.152160  0.0  0.0  0.0  0.031576  0.0\n",
-      "rightVxTurnOver              400.0  0.316485  0.089875  1.073560  0.0  0.0  0.0  0.159366  0.0\n"
+      "rightVxTurnOver              305.0  0.062587  0.009521  0.152160  0.0  0.0  0.0  0.031576  0.0\n",
+      "rightRarefactionCenter       400.0  0.316485  0.089875  1.073560  0.0  0.0  0.0  0.159366  0.0\n"
      ]
     }
    ],
@@ -409,10 +409,18 @@
     "printData([(100, 'leftRarefactionCenter'),\n",
     "           (210, 'leftVxTurnOver'),\n",
     "           (256, 'midPoint'),\n",
-    "           (305, 'rightRarefactionCenter'),\n",
-    "           (400, 'rightVxTurnOver')], \n",
+    "           (305, 'rightVxTurnOver'),\n",
+    "           (400, 'rightRarefactionCenter')],\n",
     "          efrData)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "07f9c593",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
